*SVN*

* Avoid calling is_missing on LoadErrors. Closes #7460. [ntalbott]

* Move Railties' Dispatcher to ActionController::Dispatcher, introduce before_ and after_dispatch callbacks, and warm up to non-CGI requests.  [Jeremy Kemper]

* The tag helper may bypass escaping.  [Jeremy Kemper]

* Cache asset ids.  [Jeremy Kemper]

* Optimized named routes respect AbstractRequest.relative_url_root.  #9612 [danielmorrison, Jeremy Kemper]

* Introduce ActionController::Base.rescue_from to declare exception-handling methods. Cleaner style than the case-heavy rescue_action_in_public.  #9449 [norbert]

* Rename some RequestForgeryProtection methods.  The class method is now #protect_from_forgery, and the default parameter is now 'authenticity_token'.  [Rick]

* Merge csrf_killer plugin into rails.  Adds RequestForgeryProtection model that verifies session-specific _tokens for non-GET requests.  [Rick]

* Secure #sanitize, #strip_tags, and #strip_links helpers against xss attacks.  Closes #8877. [Rick, lifofifo, Jacques Distler]

  This merges and renames the popular white_list helper (along with some css sanitizing from Jacques Distler version of the same plugin).
  Also applied updated versions of #strip_tags and #strip_links from #8877.

* Remove use of & logic operator. Closes #8114. [watson]

* Fixed JavaScriptHelper#escape_javascript to also escape closing tags #8023 [rubyruy]

* Fixed TextHelper#word_wrap for multiline strings with extra carrier returns #8663 [seth]

* Fixed that setting the :host option in url_for would automatically turn off :only_path (since :host would otherwise not be shown) #9586 [Bounga]

* Added FormHelper#label #8641 [jcoglan]

* Added AtomFeedHelper (slightly improved from the atom_feed_helper plugin) [DHH]

* Prevent errors when generating routes for uncountable resources, (i.e. sheep where plural == singluar).   map.resources :sheep now creates sheep_index_url for the collection and sheep_url for the specific item.  [Koz]
