@@ -177,9 +177,8 @@ class FormTagHelperTest < Test::Unit::TestCase
     expected = %(<fieldset>Hello world!</fieldset>)
     assert_dom_equal expected, _erbout
   end
-  
-  def request_forgery_protection_token
-    nil
-    
+
+  def protect_against_forgery?
+    false
   end
 end
